Resolved conflicts and merged main into fix/heading-overflow-in-small-screens

--- a/webpack/sass/home-page.scss
+++ b/webpack/sass/home-page.scss
@@ -5,19 +5,17 @@
   // Title styling within the hero section
   .hero-title {
     @extend .padding-horizontal-big;
-<<<<<<< HEAD
+    .has-text-orange{
+      color:rgb(251 119 41);
+      }
+      
     @media(max-width:530px) {
       h1{
       font-size: 2.8rem;
       line-height: 1.2;
       }
-=======
-    .has-text-orange{
-      color:rgb(251 119 41);
->>>>>>> origin/main
     }
   }
-
   // Description styling within the hero section
   .hero-description {
     @extend .body-bigger;
